# gl-renderer-modern

./: .gitignore  CMakeLists.txt  README.md  graphics.ixx  gui.ixx  logging.h  logging.ixx  main.cpp  window.ixx
dependencies/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
